--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,16 @@
 /* TODO Add site wide styles */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+body{
+  font-family: 'Lato', sans-serif;
+  margin: 0 auto;
+}
+
+a{
+  text-decoration: none;
+}
+
+button{
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+}
