--- a/react-app/src/components/Home/home.css
+++ b/react-app/src/components/Home/home.css
@@ -3,6 +3,7 @@
   display: flex;
   background-image: url('https://assets.taskrabbit.com/v3/assets/homepage/hero-img-desktop.jpg');
   height: 495px;
+  width: 100vw;
   align-items: center;
   background-repeat: no-repeat;
 }
