--- a/react-app/src/components/OrderForm/SubPages/SecondPage/secondpage.css
+++ b/react-app/src/components/OrderForm/SubPages/SecondPage/secondpage.css
@@ -5,18 +5,21 @@
 
 .tasker-card{
   display:flex;
+  border: 1px solid lightgray;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .sp-left{
-  margin: 10px;
+  margin: 30px;
   padding: 20px;
   border: 1px solid lightgray;
   width: 300px;
+  height: 200px;
 }
 .sp-right{
   margin: 10px;
   padding: 20px;
-  border: 1px solid lightgray;
   width: 500px;
 }
 
@@ -30,4 +33,9 @@
   width:200px;
   height:200px;
   border-radius: 30px;
+}
+
+.highlight{
+  background-color: rgb(167, 223, 167);
+  box-shadow: 0px 1px 6px rgb(167, 223, 167);
 }
