--- a/react-app/src/components/OrderForm/orderform.css
+++ b/react-app/src/components/OrderForm/orderform.css
@@ -1,3 +1,33 @@
 .step-button{
   margin:30px;
 }
+
+.form-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 300px;
+  background-image: url("https://assets.taskrabbit.com/v3/assets/static/heros/homepage/hero-bookatask-small@3x-22ded6e7db61165cff390bdb32b128f9d8f517291e7080696ed78ef16e02895c.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: center;
+}
+
+.form-inner{
+}
+
+
+.fp-details-input{
+
+}
+
+
+.disabled {
+  background-color: rgb(235, 235, 235);
+  border: none;
+}
+
+.disabled:hover {
+  cursor: not-allowed;
+}
