--- a/react-app/src/components/Home/home.css
+++ b/react-app/src/components/Home/home.css
@@ -5,7 +5,9 @@
   height: 495px;
   width: 100vw;
   align-items: center;
+  background-size: cover;
   background-repeat: no-repeat;
+  background-position-x: center;
 }
 
 .home-heading-inner{
@@ -42,4 +44,39 @@
   border:none;
   padding:10px;
   border-radius: 5px;
+}
+
+
+.home-body{
+  display:flex;
+  width:80vw;
+  max-width: 1000px;
+  height: 900px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin:0 auto;
+  margin-top: 100px;
+
+}
+
+.home-body div{
+  width: 700px;
+}
+
+.home-chunk{
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.home-chunk div{
+  padding:20px;
+}
+
+.home-chunk img{
+  width:300px;
+}
+
+.home-splash-2{
+  align-self: flex-end;
 }
