--- a/react-app/src/components/MyOrders/myorders.css
+++ b/react-app/src/components/MyOrders/myorders.css
@@ -1,8 +1,27 @@
 .order-card{
   border: 1px solid lightgray;
   width: 500px;
+  margin-top: 30px;
 }
 
 .order-component{
   padding: 10px;
+}
+
+.review-button{
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  background-color:rgb(44, 172, 44);
+  color: white;
+  border:none;
+  padding:10px;
+  border-radius: 5px;
+}
+
+.order-button{
+  margin-left:30px;
+}
+
+.hidden{
+  display:none;
 }
