--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -3,6 +3,11 @@
   box-shadow: 0px 1px 6px rgb(199, 199, 199);
 }
 
+.logo{
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .nav-inner{
   display:flex;
   justify-content: space-between;
