--- a/react-app/src/components/ReviewForm/reviewform.css
+++ b/react-app/src/components/ReviewForm/reviewform.css
@@ -2,3 +2,15 @@
   width: 300px;
   height: 100px;
 }
+
+.review-form{
+  margin-top:50px;
+}
+
+.review-label{
+  padding-top:20px;
+}
+
+.review-button-container{
+  margin-top:30px;
+}
