--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -11,6 +11,7 @@
 .nav-inner{
   display:flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 1000px;
   margin: 0 auto;
   padding: 10px;
