--- a/react-app/src/components/auth/login.css
+++ b/react-app/src/components/auth/login.css
@@ -1,9 +1,9 @@
 .auth-form{
   margin: 100px auto;
-  width: 300px;
+  width: 350px;
   border: 2px solid green;
   border-radius: 10px;
-  padding: 30px
+  padding: 30px;
 }
 .auth-field{
   padding-top: 10px;
@@ -19,7 +19,24 @@
 .auth-field label span{
   font-weight: normal;
 }
+
 .auth-form button{
+
   padding: 20px;
-  margin-right: 20px;
+  width: 120px;
+}
+
+
+.demo-login-container{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+.bio-textfield{
+  height: 200px;
+  word-wrap: break-word;
+  resize:none;
 }
